CHATS_SIT/force-app/main/default/objects/T_ADJMT_CMT__c.object
<CustomObject>
    <description>Information about worker comments entered for adjustments</description>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjustment</description>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipName>Adjustment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TXT_CMT__c</fullName>
        <description>Body</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Body</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_SUBJ__c</fullName>
        <description>Subject</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Subject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Adjustment Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>